# python-environment

./: .env.local  .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: cd.yml  ci.yml
src/example_package_nimowagukari/: example.py
src/nimowagukari_examples/: module1.py
src/nimowagukari_examples/package1/: module1.py
tests/: test_inc_dec.py  test_module1.py
tests/package1/: test_module1.py
