[project]
name = "nimowagukari_examples"
version = "0.1.10"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "nimowagukari", email = "nimowagukari@outlook.com" }]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
