[project]
name = "nimowagukari-examples"
version = "0.1.12"
description = "My examples"
readme = "README.md"
authors = [{ name = "nimowagukari", email = "nimowagukari@outlook.com" }]
requires-python = ">=3.12"
dependencies = [
    "nimowagukari-examples-ext1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.workspace]
members = ["packages/nimowagukari_examples_ext1"]

[tool.uv.sources]
nimowagukari-examples-ext1 = { workspace = true }
